--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 
             <div class="top_left_inv_company_detials_div_class" id="top_left_inv_company_orignal_div_id">
 
-                <img src="season-logo.jpg" id="inv_comp_logo">
+                <img src="season-logo.jpg" id="inv_comp_logo" onclick="setupLogoImagePicker()">
 
                 <p>548, Level 37 One City Center, Ploenchit Road</p>
                 <p>Lumpini Pathumwan, Bangkok 10330 (The Premises)</p>
